--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-carddeckdemo.cardimageshost=http://127.0.0.1
-carddeckdemo.cardimagesport=8080
+poker.server.host=http://127.0.0.1
+poker.server.port=8080
+card.deck.images.server.host=http://127.0.0.1
+card.deck.images.server.port=8080
